# Labs-de-C

./: README.md
code/01-intro/: image-out.pgm  main.c  tarefa1.c  tarefa2.c  tarefa3.c  tarefa4.c  tarefa5.c
code/02-praticando/: main  main.c  tarefa1.c  tarefa2.c  tarefa3.c  tarefa4.c  tarefa5.c  tarefa6.c  tarefa7.c
code/03-gcc/: ex2  ex2.c  input.txt  saida3.txt
code/04-arrays/: ex11_12  ex11_12.c  ex13_14  ex13_14.c  tarefa1.c  tarefa2.c  tarefa3.c  tarefa4.c
code/05-pointes-structs/: ex10  ex10.c  ex11  ex11.c  ex12  ex12.c  ex13  ex13.c  ex9  ex9.c  tarefa6.c
code/06-pgm/: .gitignore  CMakeLists.txt
code/06-pgm/img/: cat.pgm
code/06-pgm/include/: lab6.h
code/06-pgm/libs/lab6/: lab6.c
code/06-pgm/src/: main.c
